create  about me page and skill component

--- a/portf/src/Components/Hero/hero.css
+++ b/portf/src/Components/Hero/hero.css
@@ -48,7 +48,7 @@
 
 .title {
   font-size: 3rem;
-  color: #ffdb1e; /* Golden accent */
+  color: #ffdb1e; 
   margin-bottom: 1rem;
 
   letter-spacing: 2px;
