--- a/portf/src/Container/About/AboutMe.css
+++ b/portf/src/Container/About/AboutMe.css
@@ -2,6 +2,7 @@
 .about-container {
   position: relative;
   min-height: 100vh;
+  padding: 4rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
